# kursach

./: CMakeLists.txt  logfile.txt  main.cpp  Отчет.docx
allocator/: allocator_types.h  borders_descriptors_memory.cpp  borders_descriptors_memory.h  buddy_system_memory.cpp  buddy_system_memory.h  memory.cpp  memory.h  memory_holder.cpp  memory_holder.h  memory_simple.cpp  memory_simple.h  sorted_list_memory.cpp  sorted_list_memory.h
backup_system/: backup_system.cpp  backup_system.h
clients/: CMakeLists.txt  client  client.cpp
command_handler/: command.cpp  command.h  command_add_collection.cpp  command_add_collection.h  command_add_data.cpp  command_add_data.h  command_add_pool.cpp  command_add_pool.h  command_add_scheme.cpp  command_add_scheme.h  command_get_data.cpp  command_get_data.h  command_get_data_between.cpp  command_get_data_between.h  command_remove_collection.cpp  command_remove_collection.h  command_remove_data.cpp  command_remove_data.h  command_remove_pool.cpp  command_remove_pool.h  command_remove_scheme.cpp  command_remove_scheme.h  command_update_data.cpp  command_update_data.h  handler.h  handler_with_command.cpp  handler_with_command.h  handler_with_command_chain.cpp  handler_with_command_chain.h
comparers/: key_comparer.cpp  key_comparer.h  string_comparer.cpp  string_comparer.h
containers/: collection_data.cpp  collection_data.h  data_base.cpp  data_base.h  pool_data.cpp  pool_data.h  scheme_data.cpp  scheme_data.h
dialogue/: dialogue.cpp  dialogue.h
file_system_recover/: file_for_recover.txt
flyweight/: flyweight_factory.cpp  flyweight_factory.h  flyweight_string.cpp  flyweight_string.h
ipc_connections/: file_mapping.cpp  file_mapping.h  ipc_type.h  message_queue.cpp  message_queue.h
logger/: logger.h  logger_builder.h  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  logger_holder.cpp  logger_holder.h
owntype/: meeting.cpp  meeting.h  own_type.cpp  own_type.h
server/: CMakeLists.txt  recoverfile.txt  server.cpp  server.h
string_methods/: mystring.cpp  mystring.h
testing_txtfiles/: file1.txt  file2.txt  file3.txt
tree/: associative_container.h  avl_tree.h  binary_search_tree.h  splay_tree.h  (+2 more)
(+7 files in other folders)
